update button placement

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <input type="range" id="variantCount" min="1" max="50" value="5">
             </label>
 
+            <button id="generateBtn">Generate Glitches</button><br><br>
+
             <label>
                 Palette Size: <span id="paletteSizeValue">4</span>
                 <input type="range" id="paletteSize" min="2" max="16" value="4">
@@ -113,8 +115,6 @@
                 H Cycle: <span id="hCycleValue">55</span>
                 <input type="range" id="hCycle" min="1" max="255" value="55">
             </label>
-
-            <button id="generateBtn">Generate Glitches</button>
         </div>
     </div>
 </div>
